[gd_scene load_steps=5 format=3 uid="uid://bi8g6i1df1t3f"]

[ext_resource type="Script" uid="uid://bfvdkpbngnhda" path="res://UI/death_ui.gd" id="1_bsl5k"]
[ext_resource type="FontFile" uid="uid://cpunfi1nqp8lg" path="res://assets/fonts/PixelOperator8.ttf" id="2_qec58"]
[ext_resource type="FontFile" uid="uid://cl0kjlbwipubq" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_qec58"]
[ext_resource type="PackedScene" uid="uid://bd65s2r8v3me3" path="res://UI/scoreUI.tscn" id="4_nivrn"]

[node name="DeathUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bsl5k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 181.0
offset_right = 40.0
offset_bottom = 217.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_qec58")
placeholder_text = "AAA"
max_length = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 576.0
offset_right = 576.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -36.0
offset_right = 10.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_qec58")
text = "BACK"
flat = true

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -7.9999695
offset_right = 50.0
offset_bottom = 8.0000305
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.8522844, 1.8522844)
theme_override_fonts/font = ExtResource("2_qec58")
text = "The house always wins"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 52.0
offset_right = 80.0
offset_bottom = 84.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_qec58")
theme_override_font_sizes/font_size = 32
text = "SCORE"

[node name="NameLabel2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 139.0
offset_right = 40.0
offset_bottom = 155.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_qec58")
text = "NAME REGISTRATION"

[node name="Score" parent="." instance=ExtResource("4_nivrn")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -138.0
offset_top = 304.0
offset_right = -138.0
offset_bottom = 304.0
grow_vertical = 1

[connection signal="text_submitted" from="TextEdit" to="." method="_on_text_edit_text_submitted"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
